[chromium] Fix scrollbar layers holding onto invalid textures after lost context https://bugs.webkit.org/show_bug.cgi?id=81841

Reviewed by James Robinson.

Source/WebCore:

Unit test: CCLayerTreeHostImplTest.scrollbarLayerLostContext

* platform/graphics/chromium/cc/CCScrollbarLayerImpl.cpp:
(WebCore::CCScrollbarLayerImpl::willDraw):

Source/WebKit/chromium:

* tests/CCLayerTreeHostImplTest.cpp:
(WebKitTests::TEST_F):
(WebKitTests):


Canonical link: https://commits.webkit.org/99201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111708 268f45cc-cd09-0410-ab3c-d52691b4dbfc